# mlpack-playground

./: CMakeLists.txt  PreLoad.cmake  README.md
src/: kek.cpp  kuka.cpp  lol.cpp
